[package]
name = "baz-studios-launcher"
version = "0.1.1"
description = "Baz Studios Launcher — keeps every Baz Studios game (and itself) updated, and runs them"
edition = "2021"

[[bin]]
name = "baz-studios-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] } # let us pull a real error out of a white/broken window instead of guessing
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2" # F11 -> native window fullscreen (wry ignores the HTML fullscreen API)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
zip = "2"
tiny_http = "0.12"
gilrs = "0.11" # native controller reading — the webview (esp. WKWebView) exposes no Gamepad API

[profile.release]
strip = true
lto = true
